--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
@@ -9,7 +9,7 @@ body {
 h1 {
   color: #EA5C2B;
   font-family: 'Ms Madi', cursive;
-  font-size: 9.375rem;
+  font-size: 6.25rem;
   margin: 200px auto 0 auto;
   line-height: 2;
 
@@ -18,18 +18,31 @@ h1 {
 h2 {
   color: #EA5C2B;
   font-family: 'Montserrat', sans-serif;
-  font-size: 3.4375rem;
+  font-size: 3.125rem;
   font-weight: normal;
+  padding-bottom: 10px;
 }
 
 h3 {
   color: #FF7F3F;
   font-family: 'Montserrat', sans-serif;
-  font-size: 2.1875rem;
+  font-size: 1.875rem;
 }
 
 p {
-  font-size: 1.5625rem;
+  font-size: 0.9375rem;
+  line-height: 2;
+}
+
+hr {
+  border: dotted #FFD19A 6px;
+  border-bottom: none;
+  width: 4%;
+  margin:100px auto;
+}
+
+a {
+  margin: 10px 20px;
 }
 
 .contact-me {
@@ -39,13 +52,24 @@ font-size: 1.5625rem;
 .top-container {
   background-color: #FDD998;
   position: relative;
-  padding-top: 100px;
+  padding-top: 24px;
   padding-bottom: 0;
+}
+
+.bottom-container {
+  background-color: #FDD998;
+  padding: 21px 14px 4px 20px;
+  margin-top: 50px;
 }
 
 .lilyburton {
   width: 400px;
   margin-top: 100px;
+}
+
+.intro {
+  width: 30%;
+  margin: auto;
 }
 
 .computer {
@@ -70,34 +94,43 @@ font-size: 1.5625rem;
 
 .twitter {
   width: 50px;
+  padding-left: 10px;
 }
 
 .twitch {
   width: 35px;
   margin-top: 20px;
+  padding-left: 10px;
 
 }
 
 .youtube {
-  width: 60px;
+  padding-top: 50px;
+  padding-left: 10px;
+  width: 50px;
+}
+
+.tiktok {
+  width: 40px;
+  padding-left: 10px;
 }
 
 .mountain {
-  margin-top: 200px;
-  width: 770px;
+  margin-top: 50px;
+  width: 500px;
 
 }
 .top-cloud {
-  width: 250px;
+  width: 200px;
   position: absolute;
-  right: 600px;
-  top: 200px;
+  right: 300px;
+  top: 40px;
 }
 
 .bot-cloud {
-  width: 250px;
+  width: 200px;
   position: absolute;
-  left: 600px;
+  left: 250px;
   bottom: 500px;
 }
 
@@ -105,13 +138,30 @@ font-size: 1.5625rem;
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
-  line-height: 2;
   padding: 100px;
+  padding-top: 0;
 }
 
 .skill-title {
   margin-left: 27%;
 }
+
+.get-in-touch {
+  margin: 0 auto 50px;
+}
+.social {
+  width: 40%;
+  padding-bottom: 0;
+padding-top: 0;
+margin: 0 auto 60px;
+}
+
+.copyright {
+  color: #40514E;
+  font-size: 0.75rem
+  padding: 20px 0;
+}
+
 
 .btn {
   background: #e68c1e;
@@ -123,7 +173,7 @@ font-size: 1.5625rem;
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
-  font-family: Georgia;
+  font-family: 'Merriweather';
   color: #ffffff;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
